[package]
name = "strunemix"
version = "0.4.1"
edition = "2021"
license = "MIT"
keywords = ["struct", "name", "data", "type", "enum"]
description = "Strunemix allows to build a struct with a form of its fields, by deriving enums of them"
authors = ["Léo Parent <ired4321@gmail.com>"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
repository = "https://github.com/iRed4321/strunemix"
homepage = "https://github.com/iRed4321/strunemix"
readme = "../README.md"
documentation = "https://docs.rs/strunemix"

[dependencies]
collect_array = "0.1.3"
micromap = "0.0.15"
strunemix_macros = { path = "../strunemix_macros", version = "0.4.0" }