[package]
name = "strunemix_macros"
version = "0.3.0"
edition = "2021"
license = "MIT"
keywords = ["struct", "name", "data", "macro", "enum"]
description = "Macro used by Strunemix to derive traits for structs"
homepage = "https://github.com/iRed4321/strunemix"

[dependencies]
quote = "1.0"
syn = "2.0"
heck = "0.5.0"
proc-macro2 = "1.0.87"

[lib]
proc-macro = true
